fix: overflow ranking and game-pame size

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -22,8 +22,9 @@ main {
   justify-content: center;
 }
 .square {
-  height: 130px;
-  width: 130px;
+  width: 30vw;
+  max-width: 150px;
+  aspect-ratio: 1/1;
   border: 1px solid #000000;
   background-color: #7fffd4;
 }
@@ -53,21 +54,23 @@ img {
 .waiting-page,
 .stats-page,
 .rules-page{
-  width: 90%;
+  width: 90vw;
+  max-width: 460px;
+  max-height: 85vh;
   margin: 15px auto 0;
   display: flex;
   flex-direction: column;
   text-align: center;
-  border: 1px solid #00000060;
+  border: 6px solid #00000060;
   border-radius: 5px;
   background-color: #00000050;
   padding: 1rem;
 }
 .start-page .name {
   text-align: center;
-  border: 1px solid #000000;
+  border: 6px solid #000000;
   border-radius: 4px;
-  padding: .35rem;
+  padding: 1rem;
 }
 .start-page button,
 .stats-page button,
@@ -75,7 +78,7 @@ img {
 .game-over-page button,
 .continue-page button {
   margin-top: .8rem;
-  border: 1px solid #000000;
+  border: 6px solid #000000;
   border-radius: 4px;
   padding: 1rem;
 }
@@ -84,14 +87,17 @@ img {
 }
 h3 {
   color: #ffffff;
-  margin: 1.5rem 0 ;
+  margin: 1.5rem 0;
+  line-height: 1.3;
 }
 .ranking {
   list-style-type: none;
+  height: 100%;
+  overflow-y: auto;
 }
 li {
   color: #ffffff;
-  margin: 1rem 0;
+  margin: .35rem 0;
   display: flex;
   justify-content: space-between;
 }
